2014-11-10  Beth Dakin  <bdakin@apple.com>

        WK1: Support default actions for read-only text
        https://bugs.webkit.org/show_bug.cgi?id=138552
        -and corresponding-
        rdar://problem/18877483

        Reviewed by Tim Horton.

        WK1 now needs to do a lot of dictionary lookup operations that it did not 
        previously have to handle. So this patch takes a lot of that functionality, which 
        was implemented as static functions in WebPageMac for WK2 and moves it into 
        WebCore.

        * WebCore.exp.in:
        * WebCore.xcodeproj/project.pbxproj:
        * editing/DictionaryLookup.h: Added.
        * editing/DictionaryLookup.mm: Added.
        (WebCore::isPositionInRange):
        (WebCore::shouldUseSelection):
        (WebCore::rangeExpandedAroundPositionByCharacters):
        (WebCore::rangeForDictionaryLookupForSelection):
        (WebCore::rangeForDictionaryLookupAtHitTestResult):
        * platform/mac/WebCoreSystemInterface.h:
        * platform/mac/WebCoreSystemInterface.mm:

2014-11-11  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r175779. <rdar://problem/18742164>

    2014-11-08  Beth Dakin  <bdakin@apple.com>
    
            Implement action menu support for videos
            https://bugs.webkit.org/show_bug.cgi?id=138534
            -and corresponding-
            rdar://problem/18742164
    
            Reviewed by Tim Horton.
    
            Export needed symbols and added not-yet-implemented 
            HitTestResult::isMediaThatCanBeDownloaded() so that action menus will work as 
            expected once it is implemented.
            * WebCore.exp.in:
            * rendering/HitTestResult.cpp:
            (WebCore::HitTestResult::isMediaThatCanBeDownloaded):
            * rendering/HitTestResult.h:
    

2014-11-06  Dana Burkart  <dburkart@apple.com>

        Merge r175710. <rdar://problem/18898712>

    2014-11-06  Beth Dakin  <bdakin@apple.com>
    