@@ -1,3 +1,15 @@
+2014-11-11  Matthew Hanson  <matthew_hanson@apple.com>
+
+        Merge r175816. <rdar://problem/18877483>
+
+    2014-11-10  Beth Dakin  <bdakin@apple.com>
+    
+            Speculative build fix.
+    
+            * editing/DictionaryLookup.h:
+            * editing/DictionaryLookup.mm:
+    
+
 2014-11-10  Beth Dakin  <bdakin@apple.com>
 
         WK1: Support default actions for read-only text
